# permutohedron

./: .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.rst  index.html
benches/: bench.rs
doc/: search-index.js
doc/implementors/core/iter/: trait.Iterator.js
doc/implementors/permutohedron/: trait.LexicalPermutation.js
doc/permutohedron/: constant.MAXHEAP.html  fn.factorial.html  fn.heap_recursive.html  index.html  sidebar-items.js  struct.Heap.html  trait.LexicalPermutation.html
doc/permutohedron/lexical/: index.html  sidebar-items.js  trait.LexicalPermutation.html
doc/src/permutohedron/: lexical.rs.html  lib.rs.html
doc/src/permutohedron/src/: lexical.rs.html  lib.rs.html
src/: control.rs  lexical.rs  lib.rs
