[package]
name = "permutohedron"
version = "0.2.0"
authors = ["bluss"]

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/permutohedron"
documentation = "http://bluss.github.io/permutohedron/"

description = "Generate permutations of sequences. Either lexicographical order permutations, or a minimal swaps permutation sequence implemented using Heap's algorithm."

keywords = ["permutations", "heaps-algorithm", "lexicographic"]

[profile.bench]
debug = true

[features]
std = []
default = ["std"]
